# lab1

./: CMakeLists.txt  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9_reflection.md
