cmake_minimum_required( VERSION 2.0 )

set(CMAKE_CXX_FLAGS "-g")

project(task3)
add_executable( task3 task3.cpp )

project(task4)
add_executable( task4 task4.cpp )

project(task5)
add_executable( task5 task5.cpp )

project(task6)
add_executable( task6 task6.cpp )

project(task7)
add_executable( task7 task7.cpp )

project(task8)
add_executable( task8 task8.cpp )
